--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
         </style> 
 </head>
 <body>
