--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         style="background-image:url('background.jpg');">
     <div class="logo">
         <img class="image" src="newlogo.png" alt="logo">
-        <h1 class="words">BangOperator!</h1>
+        <h1 class="words">JakeDoesCode!</h1>
         
     </div>
     </div>
